--- a/product-service/package.json
+++ b/product-service/package.json
@@ -24,15 +24,18 @@
     "@serverless/eslint-config": "^4.0.1",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^28.1.4",
     "@types/node": "^14.14.25",
     "esbuild": "^0.14.11",
     "eslint": "^8.19.0",
     "eslint-plugin-import": "^2.26.0",
     "git-list-updated": "^1.2.1",
+    "jest": "^28.1.2",
     "json-schema-to-ts": "^1.5.0",
     "prettier": "^2.7.1",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
@@ -41,6 +44,7 @@
   "license": "MIT",
   "eslintConfig": {
     "extends": "@serverless/eslint-config/node",
-    "root": true
+    "root": true,
+    "jest": true
   }
 }
