--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,8 +4,9 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "deploy": "sls deploy",
+    "deploy:api-doc": "sls deploy && serverless downloadDocumentation --outputFileName=api-doc.yml",
     "lint": "eslint  --ignore-path .gitignore .",
     "lint:updated": "pipe-git-updated --ext=js -- eslint --ignore-path .gitignore",
     "prettier-check": "prettier -c --ignore-path .gitignore \"**/*.{css,html,js,ts,json,md,yaml,yml}\"",
@@ -34,6 +35,7 @@
     "json-schema-to-ts": "^1.5.0",
     "prettier": "^2.7.1",
     "serverless": "^3.0.0",
+    "serverless-aws-documentation": "^1.1.0",
     "serverless-esbuild": "^1.23.3",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.4.0",
