--- a/product-service/package.json
+++ b/product-service/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "deploy": "sls deploy",
-    "deploy:api-doc": "sls deploy && serverless downloadDocumentation --outputFileName=api-doc.yml",
+    "swagger-doc": "serverless downloadDocumentation --outputFileName=swagger.yml",
+    "deploy:swagger-doc": "npm run deploy && npm run swagger-doc",
     "lint": "eslint  --ignore-path .gitignore .",
     "lint:updated": "pipe-git-updated --ext=js -- eslint --ignore-path .gitignore",
     "prettier-check": "prettier -c --ignore-path .gitignore \"**/*.{css,html,js,ts,json,md,yaml,yml}\"",
@@ -22,14 +23,20 @@
     "@middy/http-json-body-parser": "^2.5.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.15.0",
     "@serverless/eslint-config": "^4.0.1",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "^28.1.4",
     "@types/node": "^14.14.25",
+    "babel-loader": "^8.2.2",
+    "cache-loader": "^4.1.0",
     "esbuild": "^0.14.11",
     "eslint": "^8.19.0",
     "eslint-plugin-import": "^2.26.0",
+    "fork-ts-checker-webpack-plugin": "^5.0.12",
     "git-list-updated": "^1.2.1",
     "jest": "^28.1.2",
     "json-schema-to-ts": "^1.5.0",
@@ -37,10 +44,14 @@
     "serverless": "^3.0.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-esbuild": "^1.23.3",
+    "serverless-webpack": "^5.7.1",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.1.3",
+    "webpack": "^4.44.1",
+    "webpack-node-externals": "^2.5.0"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT",
