--- a/product-service/package.json
+++ b/product-service/package.json
@@ -8,6 +8,7 @@
     "deploy": "sls deploy",
     "swagger-doc": "serverless downloadDocumentation --outputFileName=swagger.yml",
     "deploy:swagger-doc": "npm run deploy && npm run swagger-doc",
+    "build-webpack": "serverless webpack --out dist",
     "lint": "eslint  --ignore-path .gitignore .",
     "lint:updated": "pipe-git-updated --ext=js -- eslint --ignore-path .gitignore",
     "prettier-check": "prettier -c --ignore-path .gitignore \"**/*.{css,html,js,ts,json,md,yaml,yml}\"",
