feat: import products file lambda implemented

--- a/import-service/package.json
+++ b/import-service/package.json
@@ -4,6 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
+    "deploy": "sls deploy --verbose",
+    "clear": "sls remove --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -11,7 +13,8 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "aws-sdk": "^2.1183.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
