test: added unit tests

--- a/import-service/tsconfig.json
+++ b/import-service/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "lib": ["ESNext"],
     "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
