--- a/import-service/package.json
+++ b/import-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "deploy": "sls deploy --verbose",
     "clear": "sls remove --verbose",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -20,13 +20,15 @@
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^28.1.6",
     "@types/node": "^14.14.25",
-    "aws-sdk-mock": "^5.7.0",
     "esbuild": "^0.14.11",
+    "jest": "^28.1.2",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
     "ts-node": "^10.4.0",
+    "ts-jest": "^28.0.5",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   },
