feat: create authorization service

--- a/serverless-compose.yml
+++ b/serverless-compose.yml
@@ -1,5 +1,8 @@
 # serverless-compose.yml
 services:
+  authorization-service:
+    path: authorization-service
+
   product-service:
     path: product-service
 
