feat: apply auth lambda to importProductFile lambda

--- a/serverless-compose.yml
+++ b/serverless-compose.yml
@@ -11,4 +11,5 @@ services:
     params:
       queueUrl: ${product-service.queueUrl}
       queueName: ${product-service.queueName}
+      basicAuthorizer: ${authorization-service.basicAuthorizer}
 
